--- a/mayikt/Spring5/mayikt01-spring5-ioc-xml/pom.xml
+++ b/mayikt/Spring5/mayikt01-spring5-ioc-xml/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mayikt</groupId>
-    <artifactId>mayikt01-spring5-ioc</artifactId>
+    <artifactId>mayikt01-spring5-ioc-xml</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
